# storm-petrel-song

./: .Rprofile  .gitignore  README.md  config.yml  dependencies.R  pyproject.toml  setup.py
R/: rplot.R  utils.R
output/reports/: binary_metrics_summary.csv  pelagicus_bioacoustics.qmd
resources/: features.csv  rf_feature_importance.csv  sbsp_rf_feature_importance.csv
scripts/: 0.1-segment-raw-data.py  0.1_data_ingest.py  0.2-segment-units.py  0.3-build-dataset.py  0.4-extract-measurements.py  0.5-train-model.py  1.0-train-model-genclusters.R  1.0-train-model.R  1.1-mds-plot.R  data_ingest.py  plots.Rmd  settings.py
src/: analysis.py
tempesta/: analysis.py  io.py
